Initial setup for SPA backend infrastructure, major changes

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,10 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+src/static/**/*
+
+# Keep all gitkeeps in the git working tree
+!**/*.gitkeep
 
 # Flask stuff:
 instance/
