End of line adjustments and script refinement

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "editor.formatOnSave": true,
-    "editor.detectIndentation": false
+    "editor.detectIndentation": false,
+    "prettier.endOfLine": "lf"
 }
