--- a/src/vite/package.json
+++ b/src/vite/package.json
@@ -20,6 +20,8 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@swc/cli": "^0.6.0",
+        "@swc/core": "^1.11.9",
         "@types/node": "^22.13.10",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
