--- a/src/vite/package.json
+++ b/src/vite/package.json
@@ -19,14 +19,15 @@
         "react-dom": "^19.0.0"
     },
     "devDependencies": {
-        "@eslint/js": "^9.21.0",
+        "@eslint/js": "^9.22.0",
         "@swc/cli": "^0.6.0",
         "@swc/core": "^1.11.9",
         "@types/node": "^22.13.10",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
+        "@typescript-eslint/eslint-plugin": "^8.26.1",
         "@vitejs/plugin-react-swc": "^3.8.0",
-        "eslint": "^9.21.0",
+        "eslint": "^9.22.0",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^15.15.0",
@@ -34,7 +35,7 @@
         "lint-staged": "^15.5.0",
         "prettier": "3.5.3",
         "typescript": "~5.7.2",
-        "typescript-eslint": "^8.24.1",
+        "typescript-eslint": "^8.26.1",
         "vite": "^6.2.0"
     }
 }
