--- a/src/vite/package.json
+++ b/src/vite/package.json
@@ -26,8 +26,11 @@
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@typescript-eslint/eslint-plugin": "^8.26.1",
+        "@typescript-eslint/parser": "^8.26.1",
         "@vitejs/plugin-react-swc": "^3.8.0",
         "eslint": "^9.22.0",
+        "eslint-import-resolver-typescript": "^3.9.1",
+        "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^15.15.0",
