--- a/src/vite/package.json
+++ b/src/vite/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
+        "check": "tsc --noEmit",
         "lint": "eslint .",
         "lint:staged": "lint-staged --config .lintstagedrc",
         "preview": "vite preview",
