--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==4.2.20
 django-vite==3.1.0
 essentia-tensorflow==2.1b6.dev1110
 numpy==1.26.4
+yt-dlp==2025.2.19
 PyYAML==6.0.2
 six==1.17.0
 sqlparse==0.5.3
