Major configuration changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "editor.formatOnSave": true,
     "editor.detectIndentation": false,
-    "prettier.endOfLine": "lf"
+    "prettier.endOfLine": "lf",
+    "python.terminal.activateEnvInCurrentTerminal": true,
+    "terminal.integrated.enablePersistentSessions": true
 }
