--- a/.gitattributes
+++ b/.gitattributes
@@ -10,9 +10,29 @@
 *.pyz    text diff=python
 *.pyi    text diff=python
 
+# Ensure those won't be messed up with
+# ============
+*.png  binary
+*.jpg  binary
+*.gif  binary
+
+# Definitively text files
+# ============
+*.php  text
+*.css  text
+*.js   text
+*.txt  text
+*.md   text
+*.xml  text
+*.json text
+*.bat  text
+*.sql  text
+*.yml  text
+
 # Binary files
 # ============
 *.db     binary
+*.sqlite3 binary export-ignore
 *.p      binary
 *.pkl    binary
 *.pickle binary
