--- a/src/vite/package.json
+++ b/src/vite/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "vite-project",
+    "name": "music-audiolyser",
     "private": true,
-    "version": "0.0.0",
+    "version": "1.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -28,6 +28,7 @@
         "@typescript-eslint/parser": "^8.26.1",
         "@vitejs/plugin-react-swc": "^3.8.0",
         "eslint": "^9.22.0",
+        "eslint-config-prettier": "^10.1.1",
         "eslint-import-resolver-typescript": "^3.9.1",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-react-hooks": "^5.1.0",
