--- a/src/vite/package.json
+++ b/src/vite/package.json
@@ -3,6 +3,27 @@
     "private": true,
     "version": "1.0.0",
     "type": "module",
+    "categories": [
+        "Other"
+    ],
+    "description": "A fairly simple UI for a Django app",
+    "readme": "A fairly simple UI for a Django app",
+    "keywords": [
+        "react",
+        "typescript",
+        "vite",
+        "django",
+        "ui",
+        "swc",
+        "spa"
+    ],
+    "homepage": "",
+    "licenses": [
+        {
+            "type": "AGPL-3.0-only",
+            "url": "https://opensource.org/license/agpl-v3"
+        }
+    ],
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
@@ -18,6 +39,11 @@
     "dependencies": {
         "react": "^19.0.0",
         "react-dom": "^19.0.0"
+    },
+    "engines": {
+        "node": ">=18.0.0",
+        "pnpm": ">=8.0.0",
+        "npm": ">=10.0.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.22.0",
