--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.detectIndentation": false,
     "prettier.endOfLine": "lf",
     "python.terminal.activateEnvInCurrentTerminal": true,
+    "python.defaultInterpreterPath": ".env/bin/python",
     "terminal.integrated.enablePersistentSessions": true
 }
