--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ PyYAML==6.0.2
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
-whitenose==6.9.0
+whitenoise==6.9.0
 django-cors-headers==4.7.0
+black==25.1.0
