--- a/src/vite/package.json
+++ b/src/vite/package.json
@@ -17,7 +17,7 @@
         "swc",
         "spa"
     ],
-    "homepage": "",
+    "homepage": "https://github.com/proudCobolWriter/music-audiolyser",
     "licenses": [
         {
             "type": "AGPL-3.0-only",
