--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
     "editor.detectIndentation": false,
     "prettier.endOfLine": "lf",
     "python.terminal.activateEnvInCurrentTerminal": true,
-    "python.defaultInterpreterPath": ".venv/bin/python",
+    "python.defaultInterpreterPath": "/.venv/bin/python",
     "terminal.integrated.enablePersistentSessions": true
 }
