--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "typing_extensions==4.12.2",
     "whitenoise==6.9.0",
     "django-cors-headers==4.7.0",
+    "colorist==1.1.2",
 ]
 
 [project.optional-dependencies]
