--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -53,6 +53,10 @@ click==8.1.8 \
     # via
     #   black
     #   pip-tools
+colorist==1.1.2 \
+    --hash=sha256:2ba238e01fd92a803e2a6712379a9fcab0daa33b8f4e247e4fe74b04b3bca93c \
+    --hash=sha256:e9ffa6d8ee5f2e90fa0761dc440296b206563760272aa736331ab4309dcd3334
+    # via music-audiolyser (pyproject.toml)
 decorator==5.2.1 \
     --hash=sha256:65f266143752f734b0a7cc83c46f4618af75b8c5911b00ccb61d0ac9b6da0360 \
     --hash=sha256:d316bb415a2d9e2d2b3abcc4084c6502fc09240e292cd76a76afc106a1c8e04a
